tests/algorithms/x/Scala/divide_and_conquer/inversions.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/divide_and_conquer/inversions.scala:105: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
    val nbf: BigInt = count_inversions_bf(arr_1)
                                          ^
/workspace/mochi/tests/algorithms/x/Scala/divide_and_conquer/inversions.scala:106: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
    val nrec: BigInt = (count_inversions_recursive(arr_1)).asInstanceOf[InvResult].inv
                                                   ^
/workspace/mochi/tests/algorithms/x/Scala/divide_and_conquer/inversions.scala:109: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
    val nbf2: BigInt = count_inversions_bf(arr_1)
                                           ^
/workspace/mochi/tests/algorithms/x/Scala/divide_and_conquer/inversions.scala:110: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
    val nrec2: BigInt = (count_inversions_recursive(arr_1)).asInstanceOf[InvResult].inv
                                                    ^
four errors found
